bfs: Always check if NodeGetter succeeded.

* There were quite a few cases that just assumed that the disk access
  would succeed.
* This also fixes bug #12962.