src/add-ons/kernel/file_systems/bfs/Query.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright 2001-2014, Axel Dörfler, axeld@pinc-software.de.
+ * Copyright 2001-2017, Axel Dörfler, axeld@pinc-software.de.
  * Copyright 2010, Clemens Zeidler <haiku@clemens-zeidler.de>
  * This file may be used under the terms of the MIT License.
  */
@@ -558,6 +558,8 @@ Equation::Match(Inode* inode, const char* attributeName, int32 type,
 	} else if (!strcmp(fAttribute, "name")) {
 		// we need to lock before accessing Inode::Name()
 		nodeGetter.SetToNode(inode);
+		if (nodeGetter.Node() == NULL)
+			return B_IO_ERROR;
 
 		recursive_lock_lock(&inode->SmallDataLock());
 		locked = true;
@@ -589,6 +591,9 @@ Equation::Match(Inode* inode, const char* attributeName, int32 type,
 		// then for attributes in the small_data section, and finally for the
 		// real attributes
 		nodeGetter.SetToNode(inode);
+		if (nodeGetter.Node() == NULL)
+			return B_IO_ERROR;
+
 		Inode* attribute;
 
 		recursive_lock_lock(&inode->SmallDataLock());
